<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94CDE8"
    tools:context="com.example.Project_App_Files.MainActivity">

    <TextView
        android:id="@+id/HeaderTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/willThey"
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginBottom="200dp"
        android:text="@string/Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settingBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/Settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingBtn"
        app:layout_constraintVertical_bias="0.32" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/space"
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderTxt"
        app:srcCompat="@drawable/around_plane" />

</androidx.constraintlayout.widget.ConstraintLayout>